# regex4seq

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Justfile  Makefile  README.md  poetry.toml  pyproject.toml
.circleci/: config.yml
docs/: conf.py  index.rst  modules.rst  regex4seq.rst  requirements.txt
src/regex4seq/: __init__.py  regex4seq.py  trail.py
tests/: test_regex4seq.py
