[tool.poetry]
name = "regex4seq"
version = "0.1.0"
description = "Regular Expressions for Sequences of Things"
authors = ["Stephen Leach <sfkleach@gmail.com>"]
license = "Python Software Foundation License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
sphinx = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
